--- a/index.html
+++ b/index.html
@@ -284,7 +284,10 @@
             >
           </div>
         </div>
-        <a href="#" class="mybutton"> SEE ALL </a>
+        <a href="#" class="mybutton">
+          SEE <br />
+          ALL
+        </a>
       </div>
       <div id="video"></div>
       <div class="videobanner"><p>VIDEO</p></div>
@@ -344,7 +347,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <a href="#" class="mybutton"> SEE ALL </a>
+        <a href="#" class="mybutton"> SEE<br />ALL </a>
       </div>
       <div id="web"></div>
       <div class="webbanner"><p>WEB</p></div>
