--- a/videos.html
+++ b/videos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Videos</title>
-    <link rel="stylesheet" href="shtoyle.css" />
+    <link rel="stylesheet" href="vid.css" />
     <link rel="stylesheet" href="CSS Reset - Normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,5 +20,81 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <h1>VIDEOS</h1>
+    <div class="videos">
+      <div class="contentwrapper">
+        <div class="game">
+          <h2>GAMING</h2>
+        </div>
+        <div class="gamevidwrapper">
+          <div class="video_bucket">
+            <iframe
+              src="https://www.youtube.com/embed/lLzOyGVzUac"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video_bucket">
+            <iframe
+              src="https://www.youtube.com/embed/2WaageRFvsQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video_bucket">
+            <iframe
+              src="https://www.youtube.com/embed/F_tsKv4EgXE"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="music">
+          <h2>MUSIC</h2>
+        </div>
+        <div class="musicvidwrapper">
+          <div class="video_bucket">
+            <iframe
+              src="https://www.youtube.com/embed/554gTlXt0Xw"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video_bucket">
+            <iframe
+              src="https://www.youtube.com/embed/mCnnYBeJ4mk"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="other">
+          <h2>OTHER</h2>
+        </div>
+        <div class="othervidwrapper">
+          <div class="video_bucket">
+            <iframe
+              src="https://www.youtube.com/embed/7DGNAnznjaw"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h3><a href="www.timmytuesday.us">HOME</a></h3>
+  </body>
 </html>
