--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <a href="#" class="mybutton"> SEE<br />ALL </a>
+        <a href="/videos.html" class="mybutton"> SEE<br />ALL </a>
       </div>
       <div id="web"></div>
       <div class="webbanner"><p>WEB</p></div>
