--- a/videos.html
+++ b/videos.html
@@ -28,32 +28,115 @@
           <h2>GAMING</h2>
         </div>
         <div class="gamevidwrapper">
-          <div class="video_bucket">
-            <iframe
-              src="https://www.youtube.com/embed/lLzOyGVzUac"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-          </div>
-          <div class="video_bucket">
-            <iframe
-              src="https://www.youtube.com/embed/2WaageRFvsQ"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-          </div>
-          <div class="video_bucket">
-            <iframe
-              src="https://www.youtube.com/embed/F_tsKv4EgXE"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="row">
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/lLzOyGVzUac"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/2WaageRFvsQ"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video_bucket">
+              <iframe
+                src="https://www.youtube.com/embed/F_tsKv4EgXE"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
         </div>
         <div class="music">
@@ -95,6 +178,6 @@
         </div>
       </div>
     </div>
-    <h3><a href="www.timmytuesday.us">HOME</a></h3>
+    <h3><a href="index.html">HOME</a></h3>
   </body>
 </html>
