--- a/WildWing/index.html
+++ b/WildWing/index.html
@@ -11,18 +11,35 @@
     <header>
       <div class="hednnav">
         <img src="media\IMG_8482.jpg" class="logo" />
-        <nav>
+        <!-- <nav>
           <ul class="nav-links">
             <li><a href="#">HOME</a></li>
             <div class="divider"></div>
-            <li><a href="#music" title="Music I made or Sang">ABOUT</a></li>
+            <li><a href="#music" title="Music I made or Sang">SHOP</a></li>
             <div class="divider"></div>
-            <li><a href="#video" title="Gaming Videos">SHOP</a></li>
+            <li><a href="#video" title="Gaming Videos">ART</a></li>
             <div class="divider"></div>
             <li><a href="#web" title="Web Dev Projects">CONTACT</a></li>
           </ul>
-        </nav>
+        </nav> -->
+
+        <div class="tabContainer">
+          <div class="buttonContainer">
+            <button>HOME</button>
+            <button>SHOP</button>
+            <button>ART</button>
+            <button>EVENTS</button>
+            <button>CONTACT</button>
+          </div>
+          <div class="tabpanel">HOME:Content</div>
+          <div class="tabpanel">SHOP:Content</div>
+          <div class="tabpanel">ART:Content</div>
+          <div class="tabpanel">EVENTS:Content</div>
+          <div class="tabpanel">CONTACT:Content</div>
+        </div>
       </div>
     </header>
+    <main></main>
+    <script src="main.js"></script>
   </body>
 </html>
