--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>MUSIC</p>
       </div>
       <div class="container_music">
-        <div class="swipeicon">SWIPE LEFT</div>
+        <div class="swipeicon">SWIPE<br />LEFT</div>
         <div class="music_bucket">
           <iframe
             width="100%"
@@ -367,10 +367,13 @@
           </a>
         </div>
         <div class="webthree">
-          <a href="#web">
-            <div class="webbutton">
-              <span>Place Holder</span>
-            </div>
+          <a href="WildWing/shop.html" class="chewbButton"
+            ><img
+              src="media/IMG_20221016_140922.jpg"
+              alt=""
+              height="150px"
+              width="150px"
+            />
           </a>
         </div>
       </div>
