--- a/WildWing/shop.html
+++ b/WildWing/shop.html
@@ -16,6 +16,7 @@
             onclick="showPanel(0,'#301934')"
             class="tabsButton"
             data-for-tab="1"
+            id="homePanel"
           >
             HOME
           </button>
